<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="#f5f6f8">

        <TextView
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="goToSignUpActivity"/>

        <TextView
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="goToHomeActivity"/>

        <TextView
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Product"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="goToProductActivity"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="Enter User Name"
            app:hintTextColor="@color/colorPrimary"
            android:textColorHint="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_person_red_24dp"
            app:startIconTint="@color/colorPrimary"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorAccent"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--    Start-->
        <RelativeLayout
            android:id="@+id/banner_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp">

            <ImageView
                android:id="@+id/base"
                android:layout_width="406dp"
                android:layout_height="265dp"
                android:layout_marginStart="-41dp"
                android:layout_marginLeft="-41dp"
                android:layout_marginTop="-33dp"
                android:contentDescription="base"
                android:src="@drawable/base" />


            <RelativeLayout
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="119dp">

                <View
                    android:id="@+id/rectangle_1"
                    android:layout_width="121dp"
                    android:layout_height="39.49365234375dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/rectangle_1_shape" />

                <View
                    android:id="@+id/rectangle_2"
                    android:layout_width="28.79736328125dp"
                    android:layout_height="29.620239257812dp"
                    android:layout_marginStart="87dp"
                    android:layout_marginLeft="87dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rectangle_2_shape" />

                <TextView
                    android:id="@+id/see_more"
                    android:layout_width="65dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="11dp"
                    android:fontFamily="Neusa Next Std"
                    android:gravity="center"
                    android:text="@string/see_more_string"
                    android:textColor="@color/cart_color"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/path_11"
                    android:layout_width="7.58251953125dp"
                    android:layout_height="12.51904296875dp"
                    android:layout_marginStart="98dp"
                    android:layout_marginLeft="98dp"
                    android:layout_marginTop="13dp"
                    android:contentDescription="path_11"
                    android:src="@drawable/path_11" />

            </RelativeLayout>

            <TextView
                android:id="@+id/for_all_your__summer_clothing__needs"
                android:layout_width="131dp"
                android:layout_height="80dp"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="19dp"
                android:fontFamily="Neusa Next Std"
                android:text="@string/for_all_your__summer_clothing__needs_string"
                android:textColor="@color/_10_color"
                android:textSize="18sp" />

        </RelativeLayout>
        <!--    End-->

        <!--    Start-->
        <RelativeLayout
            android:id="@+id/ankle_boots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:padding="10dp">

            <View
                android:id="@+id/rectangle_3"
                android:layout_width="101dp"
                android:layout_height="135dp"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/rectangle_3_shape" />

            <TextView
                android:id="@+id/ankle_boots_ek1"
                android:layout_width="64dp"
                android:layout_height="18dp"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="97dp"
                android:fontFamily="Neusa Next Std"
                android:text="@string/ankle_boots_ek1_string"
                android:textColor="#515c6f"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/__49_99"
                android:layout_width="36dp"
                android:layout_height="16dp"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="113dp"
                android:fontFamily="Neusa Next Std"
                android:text="@string/__49_99_string"
                android:textColor="#515c6f" />

            <ImageView
                android:id="@+id/women_shoes_png7464"
                android:layout_width="74.7509765625dp"
                android:layout_height="69dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="20dp"
                android:contentDescription="women_shoes_png7464"
                android:src="@drawable/women_shoes_png7464" />

        </RelativeLayout>
        <!--    End-->

<!--        Start-->
        <RelativeLayout
            android:id="@+id/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="195dp"
            android:layout_marginLeft="195dp">

            <View
                android:id="@+id/base_ek1"
                android:layout_width="165dp"
                android:layout_height="46dp"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/base_ek1_shape" />

            <TextView
                android:id="@+id/add_to_cart_ek1"
                android:layout_width="91dp"
                android:layout_height="18dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="15dp"
                android:fontFamily="Neusa Next Std"
                android:gravity="center"
                android:text="@string/add_to_cart_ek1_string"
                android:textColor="@color/add_to_cart_ek1_color"
                android:textSize="12sp" />


            <RelativeLayout
                android:id="@+id/icon_ek1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="128dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="128dp">

                <View
                    android:id="@+id/rectangle_2_ek1"
                    android:layout_width="28.79736328125dp"
                    android:layout_height="29.6201171875dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/rectangle_2_ek1_shape" />

                <ImageView
                    android:layout_width="7.58251953125dp"
                    android:layout_height="12.51904296875dp"
                    android:layout_marginStart="11dp"
                    android:layout_marginLeft="11dp"
                    android:layout_marginTop="9dp"
                    android:contentDescription="path_11"
                    android:src="@drawable/path_11" />

            </RelativeLayout>

        </RelativeLayout>
<!--        End-->

    </LinearLayout>

</ScrollView>
